--- a/css/styles.css
+++ b/css/styles.css
@@ -7479,6 +7479,10 @@ textarea.form-control-lg {
   padding-right: 3rem !important;
   padding-left: 3rem !important;
 }
+.px-6 {
+  padding-right: 5rem !important;
+  padding-left: 5rem !important;
+}
 
 .py-0 {
   padding-top: 0 !important;
