--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ hr:not([size]) {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: "Newsreader", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 600;
   line-height: 1.2;
 }
@@ -640,6 +640,36 @@ progress {
   margin-left: auto;
 }
 
+#account {
+  padding-top: 1rem;
+  padding: 0.25rem 0.75rem;
+  padding-bottom: 1rem;
+  font-size: 3rem;
+  line-height: 1;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-color: rgba(214, 214, 214, 0.9);;
+  border-radius: 0.25rem;
+  transition: box-shadow 0.15s ease-in-out;
+  color: rgba(0, 0, 0, 0.9);
+}
+
+@media (max-width: 576px) {
+  .container-sm, .container {
+    max-width: 500px;
+  }
+  .mainImg {
+    position: relative;
+    max-width: 200px;
+    max-height: 100px;
+  }
+  .personImg {
+    position: relative;
+    max-width: 300px;
+    max-height: 210px;
+  }
+}
+
 @media (min-width: 576px) {
   .container-sm, .container {
     max-width: 540px;
@@ -649,6 +679,12 @@ progress {
     max-width: 200px;
     max-height: 100px;
   }
+  .personImg {
+    position: relative;
+    max-width: 200px;
+    max-height: 138px;
+  }
+ 
 }
 @media (min-width: 768px) {
   .container-md, .container-sm, .container {
@@ -659,7 +695,13 @@ progress {
     max-width: 350px;
     max-height: 220px;
   }
+  .personImg {
+    position: relative;
+    max-width: 280px;
+    max-height: 238px;
+  }
 }
+
 @media (min-width: 992px) {
   .container-lg, .container-md, .container-sm, .container {
     max-width: 960px;
@@ -669,6 +711,14 @@ progress {
     max-width: 500px;
     max-height: 400px;
   }
+  .personImg {
+    position: relative;
+    max-width: 350px;
+    max-height: 238px;
+  }
+  #account {
+    display: none;
+  }
 }
 @media (min-width: 1200px) {
   .container-xl, .container-lg, .container-md, .container-sm, .container {
@@ -677,7 +727,15 @@ progress {
   .mainImg {
     position: relative;
     max-width: 500px;
-    max-height: 400px;
+    max-height: 338px;
+  }
+  .personImg {
+    position: relative;
+    max-width: 600;
+    max-height: 456px;
+  }
+  #account {
+    display: none;
   }
 }
 @media (min-width: 1400px) {
@@ -689,6 +747,14 @@ progress {
     max-width: 600px;
     max-height: 400px;
   }
+ .personImg {
+    position: relative;
+    max-width: 600px;
+    max-height: 438px;
+  }
+  #account {
+    display: none;
+  }
 }
 .row {
   --bs-gutter-x: 1.5rem;
@@ -696,7 +762,7 @@ progress {
   display: flex;
   flex-wrap: wrap;
   margin-top: calc(var(--bs-gutter-y) * -1);
-  margin-right: calc(var(--bs-gutter-x) * -.5);
+  /* margin-right: calc(var(--bs-gutter-x) * -.5); */
   margin-left: calc(var(--bs-gutter-x) * -.5);
 }
 .row > * {
@@ -6335,6 +6401,8 @@ textarea.form-control-lg {
   margin-bottom: -0.5rem;
 }
 
+
+
 .offcanvas-title {
   margin-bottom: 0;
   line-height: 1.5;
@@ -11309,8 +11377,8 @@ html {
   scroll-padding-top: 4.5rem;
 }
 
-html body {
-  min-height: 100%
+html, body {
+  min-height: 100%;
 }
 
 .bg-black {
@@ -11564,6 +11632,7 @@ footer a:hover, footer a:active, footer a:focus {
   background-color: #f8f9fa;
   padding-top: 9.5rem;
   padding-bottom: 5rem;
+  min-height: 76.6vh;
 }
 .masthead .masthead-device-mockup {
   display: flex;
