--- a/css/styles.css
+++ b/css/styles.css
@@ -641,9 +641,9 @@ progress {
 }
 
 #account {
-  padding-top: 1rem;
+  padding-top: 0.75rem;
   padding: 0.25rem 0.75rem;
-  padding-bottom: 1rem;
+  padding-bottom: 0.60rem;
   font-size: 3rem;
   line-height: 1;
   background-color: transparent;
@@ -4140,6 +4140,7 @@ textarea.form-control-lg {
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
   margin-right: 1rem;
+  margin-left: 1rem;
   font-size: 2.5rem;
   text-decoration: none;
   white-space: nowrap;
